--- a/delivery/web/views/layout.slim
+++ b/delivery/web/views/layout.slim
@@ -4,4 +4,5 @@ html
     title MaVi
     meta name="viewport" content="width=device-width, initial-scale=1.0"
   body
+    = flash['reindex']
     == yield
